# esp32-purespa

./: CMakeLists.txt  README.md  ideas_future_releases.md  ota_documentation.md
main/: CMakeLists.txt  captive_portal.c  captive_portal.cpp  captive_portal.h  config.html  dns_server.c  dns_server.cpp  dns_server.h  idf_component.yml  index.html  main.c  main.cpp  status_led.cpp  status_led.h  web_server.c  web_server.cpp  web_server.h  wifi_manager.c  wifi_manager.cpp  wifi_manager.h
main/purespa/: AuditLogger.cpp  AuditLogger.h  PureSpaIO.cpp  PureSpaIO.h  PureSpaService.cpp  PureSpaService.h  common.h
mock-backend/: compress.js  package-lock.json  package.json  server.ts
